--- a/lostFound/src/html/dashboard.html
+++ b/lostFound/src/html/dashboard.html
@@ -1,6 +1,6 @@
-<div class="dashboard"></div>
+<div class="dashboard">
     <div class="logo">
-        <img src="assets/logo.png" alt="University Logo">
+        <img src="../assets/images/logo.png" alt="University Logo">
     </div>
     <nav>
         <ul>
